--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Flow+Circular&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -18,6 +20,7 @@ ol {
   display: flex;
   justify-content: space-between;
   padding: 36px 0;
+  align-items: center;
 }
 
 .logo {
@@ -56,6 +59,8 @@ ol {
   background-image: url("../images/background.svg");
   background-repeat: no-repeat;
   margin-bottom: 35px;
+  background-position-x: center;
+  background-size: 100%;
 }
 
 .travel-guide {
@@ -84,8 +89,8 @@ ol {
   box-shadow: 0px 22.07px 13.35px 0px rgba(0, 0, 0, 0.05),
     0px 39.53px 15.91px 0px rgba(0, 0, 0, 0.01),
     0px 61.6px 17.45px 0px rgba(0, 0, 0, 0);
-  right: -10%;
-  bottom: 25%;
+  right: -25px;
+  bottom: 85px;
 }
 
 .explore {
@@ -96,9 +101,215 @@ ol {
   display: flex;
   align-items: center;
   justify-self: center;
+  padding: 16px 32px;
+  border-radius: 100px;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.07),
+    0px 34px 75px 0px rgba(0, 0, 0, 0.07),
+    0px 137px 137px 0px rgba(0, 0, 0, 0.06),
+    0px 308px 185px 0px rgba(0, 0, 0, 0.04),
+    0px 548px 219px 0px rgba(0, 0, 0, 0.01),
+    0px 856px 240px 0px rgba(0, 0, 0, 0);
+  margin-bottom: 16px;
+  gap: 18px;
+  color: rgb(248, 94, 159);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 120%;
 }
 .explore__button-wrapper {
   display: flex;
   flex-direction: column;
   gap: 24px;
+}
+
+.explore__title {
+  color: rgb(0, 0, 0);
+  font-family: Inter;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 120%;
+  margin-bottom: 24px;
+}
+
+.explore__paragraph {
+  color: rgba(25, 24, 37, 0.5);
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+  margin-bottom: 32px;
+}
+
+.explore__button {
+  border: 1px solid rgb(238, 238, 238);
+  border-radius: 100px;
+  padding: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(255, 255, 255);
+  color: rgb(34, 40, 49);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 120%;
+  gap: 10px;
+}
+
+.explore__button--violet {
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1),
+    0px 5px 11px 0px rgba(0, 0, 0, 0.1), 0px 20px 20px 0px rgba(0, 0, 0, 0.09),
+    0px 45px 27px 0px rgba(0, 0, 0, 0.05), 0px 81px 32px 0px rgba(0, 0, 0, 0.01),
+    0px 126px 35px 0px rgba(0, 0, 0, 0);
+  background: rgb(93, 80, 198);
+  border: 0;
+  color: rgb(238, 238, 238);
+}
+
+/* ---------------------tablet--------------------------- */
+
+@media (min-width: 1024px) {
+  .container {
+    width: 896px;
+  }
+
+  .auth {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+  }
+
+  .auth__link {
+    color: rgb(34, 40, 49);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 120%;
+  }
+
+  .auth__button {
+    padding: 16px 32px;
+    border-radius: 100px;
+    background: rgb(93, 80, 198);
+    border: 0;
+    color: rgb(238, 238, 238);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 120%;
+  }
+  .header {
+    flex-direction: row-reverse;
+  }
+
+  .travel-guide {
+    width: 772px;
+    padding: 64px 0;
+  }
+
+  .travel-guide__location-first,
+  .travel-guide__second-first {
+    height: 300px;
+  }
+
+  .travel-guide__third-first {
+    height: 400px;
+  }
+  .travel-guide__locations {
+    padding-top: 75px;
+  }
+
+  .travel-guide__top-location img {
+    width: 17px;
+  }
+
+  .travel-guide__top-location {
+    bottom: 170px;
+    right: 5px;
+    padding: 18px 35px;
+  }
+
+  .explore__button-wrapper {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .travel-guide__send {
+    width: 132px;
+  }
+
+  .travel-guide__add-user {
+    width: 132px;
+  }
+
+  .explore__button {
+    padding: 18px 34px;
+  }
+
+  .explore__title {
+    font-size: 56px;
+    margin-bottom: 43px;
+  }
+
+  .explore__paragraph {
+    margin-bottom: 43px;
+    font-size: 18px;
+  }
+}
+
+/* -------------------------desktop---------------------------- */
+@media (min-width: 1440px) {
+  .container {
+    width: 1184px;
+  }
+
+  .header__burger-menu {
+    display: none;
+  }
+
+  .nav {
+    display: block;
+  }
+
+  .nav__list {
+    display: flex;
+    gap: 64px;
+    color: rgba(25, 24, 37, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 120%;
+    align-items: center;
+  }
+
+  .travel-guide {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+  }
+
+  .travel-guide__locations {
+    gap: 32px;
+  }
+
+  .explore {
+    text-align: start;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    order: -1;
+  }
+
+  .explore__button-wrapper {
+    justify-content: start;
+  }
+
+  .explore__title {
+    font-size: 69px;
+  }
+
+  .explore__wrapper {
+    margin-bottom: 43px;
+  }
 }
